--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,8 +5,11 @@
 @import './variables';
 @import './scaffolding.scss';
 @import './mixins.scss';
-@import './blocks/page';
+@import './blocks/section';
 @import './blocks/main-header';
 @import './blocks/about-section';
+@import './blocks/team-section';
+@import './blocks/works-section';
+@import './blocks/services-section';
 
 
