--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -7,12 +7,16 @@ $md-min: 768px;
 $lg-min: 992px;
 $xl-min: 1200px;
 
+// $sm-min: 576px;
+// $md-min: 768px;
+// $lg-min: 1200px;
+// // $xl-min: 1200px;
 
-$only-sm: "screen and (max-width: 768px)";
+
 $sm-widths: " screen and (min-width:#{$sm-min})";
 $md-widths: " screen and (min-width:#{$md-min})";
 $lg-widths: " screen and (min-width:#{$lg-min})";
-$lg-widths: " screen and (min-width:#{$xl-min})";
+$xl-widths: " screen and (min-width:#{$xl-min})";
 
 
 $yellow : #fcac45;
