--- a/src/sass/blocks/services-section.scss
+++ b/src/sass/blocks/services-section.scss
@@ -37,16 +37,16 @@
 }
 
 .services-section__card:nth-child(1) .services-section__card-icon{
-    background-image: url("/distr/img/icon/1.png")
+    background-image: url("../img/icon/1.png")
 }
 .services-section__card:nth-child(2) .services-section__card-icon{
-    background-image: url("/distr/img/icon/2.png")
+    background-image: url("../img/icon/2.png")
 }
 .services-section__card:nth-child(3) .services-section__card-icon{
-    background-image: url("/distr/img/icon/3.png")
+    background-image: url("../img/icon/3.png")
 }
 .services-section__card:nth-child(4) .services-section__card-icon{
-    background-image: url("/distr/img/icon/4.png")
+    background-image: url("../img/icon/4.png")
 }
 .services-section__card-title{
     font-size: 24px;
