--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,8 @@
 @import './blocks/works-section';
 @import './blocks/services-section';
 @import './blocks/clients-section';
+@import './blocks/testimonials-section';
 @import './blocks/page-footer';
+
 
 
