--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,8 @@
 @import './blocks/services-section';
 @import './blocks/clients-section';
 @import './blocks/testimonials-section';
+@import './blocks/contact-section';
+@import './blocks/contact-form';
 @import './blocks/page-footer';
 
 
