fix label color

--- a/src/sass/blocks/contact-form.scss
+++ b/src/sass/blocks/contact-form.scss
@@ -19,6 +19,9 @@
     flex-basis: 100%;
     display: block;
     padding-bottom: 10px;
+    span{
+        color:#db0000
+    }
 
 }
 .contact-form__input-text{
